fix to main page img wrapping

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-container{
-    background: url('../images/img-home.jpg');
+    background: url('../images/img-home.jpg') center center/cover no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
